--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: MultiK
+Package: MultiKParallel
 Type: Package
 Title: Objectively selects multiple insightful numbers of clusters K from single cell RNA-seq data. 
 Version: 0.1.0
@@ -10,3 +10,8 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Imports: 
+    doParallel,
+    doSNOW,
+    foreach,
+    parallel
